# bot

./: Cargo.toml  Dockerfile  LICENSE  build.rs
.github/workflows/: docker-image.yml
src/: common.rs  inventory.rs  main.rs  ping_limit.rs
src/commands/: dox.rs  eval.rs  mod.rs  ping.rs  settings.rs  version.rs  yeehaw.rs
src/commands/administration/: ban.rs
src/commands/eval/: executor.rs  mod.rs  parse.rs  parser.rs  tokenizer.rs
src/commands/gambling/: balance.rs  blackjack.rs  daily.rs  give.rs  leaderboard.rs  mod.rs  shop.rs  wager.rs
src/commands/self_roles/: admin.rs  color.rs  disown.rs  mod.rs  name.rs  register.rs  remove.rs  whois.rs
