[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
lamm = { git = "https://github.com/minneelyyyy/lamm", branch = "dev" }
regex = "1.11.1"