[package]
name = "bot"
version = "0.1.3"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
lamm = { git = "https://github.com/minneelyyyy/lamm", branch = "dev" }
regex = "1.11.1"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
hex_color = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
once_cell = "1.20.2"